run tests with java 17 for google-java-format record support